--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.3.0'
     // oauth 의존성
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    // aws 의존성
+    implementation 'software.amazon.awssdk:s3:2.20.86'
 }
 
 tasks.named('test') {
