--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -15,7 +15,8 @@ spring:
     redis:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
-      password: ${REDIS_PASSWORD}
+    mongodb:
+      uri: mongodb://localhost:27017/testdb
 moongchee:
   jwt:
     key: ${JWT_KEY}
