--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -2,9 +2,9 @@ name: MoongChee CICD
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "main" ]
     types: [ opened, synchronize, reopened ]
 
 jobs:
